--- a/index.html
+++ b/index.html
@@ -5,19 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBSLtLbi-hn71RC0ENs3E5EOFKhQQ_cUTfeXcYZ9SWvQ&s">
     <title>Kompyuterlar savdosi</title>
-    
+    <link rel="stylesheet" href="./css/asosiy.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
-  
-
-     <h1>Kompyuterlar savdosi</h1>
+     <header>
+          <nav>
+               <div class="container">
+                <div class="logo">
+                  <p>
+                    <i class="fa-solid fa-ribbon"></i>
+                  </p>
+                  <h1>computer sales</h1>
+                 </div>
+                 <ul class="links">
+                    <li>
+                       <a href="">Chegirmalar</a>
+                    </li>
+                    <li><a href="">Sotuvchi bo'lish</a></li>
+                    <li><a href="">Mobil qurilmalar</a></li>
+                 </ul>
+                 <div class="icons">
+                      <div class="search">
+                         <input placeholder="search..." type="text" id="glas">
+                         <label for="glas"><i class="fa-solid fa-magnifying-glass"></i></label>
+                      </div>
+                      <p>
+                        <a href="./pages/ro'yxat.html"><i class="fa-regular fa-user"></i></a>
+                      </p>
+                      <p>
+                         <a href="+998911712611"><i class="fa-solid fa-phone"></i></a>
+                      </p>
+                      <p>
+                        <a href="./login.html"><i class="fa-solid fa-right-from-bracket"></i></a>
+                      </p>
+                 </div>
+               </div>
+          </nav>
+          <div class="hero">
+              <div class="container">
+                   <div class="chegirma">
+                      <div class="rasm">
+                        <img  src="./imags/1-rasm-fococlipping-standard.jpeg" alt="">
+                      </div>
+                   </div>
+              </div>
+          </div>
+     </header>
 
      
-     <p>Sotib olasiz va sotuvga qo'yasiz</p>
-     <img width="300" src="./imags/1-rasm.png" alt="">
-     <img width="300" src="./imags/2-rasm.jpg" alt="">
-
-
      <h2>
         Bizning saytimiz nima qila oladi ?  
      </h2>
