--- a/pages/hp.html
+++ b/pages/hp.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imags/hp.logo.png">
     <title>Hp kompyutelari bozori</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <hr>
@@ -12,7 +13,9 @@
     <h1 style="background-color: yellow; color: red;">
         Hp kompyuterlari onlayn bozoriga xush kelibsiz
     </h1>
-
+    <p>
+      <a href="../index.html"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+    </p>
     <hr>
     <hr>
 
