--- a/pages/ro'yxat.html
+++ b/pages/ro'yxat.html
@@ -76,7 +76,7 @@
                      Tozalash
                 </button>
                 <button>
-                 <a href="../index.html">Asosiy sahifaga o'tishingiz mumkin</a>
+                 <a href="../pages/capital.html">Asosiy sahifaga o'tishingiz mumkin</a>
                 </button>
                 </div>
                  </ul>
