--- a/pages/buyurtma.html
+++ b/pages/buyurtma.html
@@ -139,7 +139,7 @@
              </p>
          <div class="btn">
           <button>
-            <a href="../index.html">Asosiy sahifaga qaytish</a>
+            <a href="../pages/capital.html">Asosiy sahifaga qaytish</a>
           </button>
         </div>
           <div class="btn">
